Updates from Overleaf

--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -157,3 +157,25 @@ doi = {10.48550/arXiv.1712.00303}
     author = {Tabone and others},
     year = {in prep.}
 }
+
+@misc{henning2024mindsjwstmirimidinfrared,
+      title={MINDS: The JWST MIRI Mid-INfrared Disk Survey}, 
+      author={Thomas Henning and Inga Kamp and Matthias Samland and Aditya M. Arabhavi and Jayatee Kanwar and Ewine F. van Dishoeck and Manuel Guedel and Pierre-Olivier Lagage and Christoffel Waelkens and Alain Abergel and Olivier Absil and David Barrado and Anthony Boccaletti and Jeroen Bouwman and Alessio Caratti o Garatti and Vincent Geers and Adrian M. Glauser and Fred Lahuis and Cyrine Nehme and Goeran Olofsson and Eric Pantin and Tom P. Ray and Bart Vandenbussche and L. B. F. M. Waters and Gillian Wright and Valentin Christiaens and Riccardo Franceschi and Danny Gasman and Rodrigo Guadarrama and Hyerin Jang and Maria Morales-Calderon and Nicole Pawellek and Giulia Perotti and Donna Rodgers-Lee and Juergen Schreiber and Kamber Schwarz and Benoit Tabone and Milou Temmink and Marissa Vlasblom and Luis Colina and Thomas R. Greve and Goeran Oestlin},
+      year={2024},
+      eprint={2403.09210},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.EP},
+      url={https://arxiv.org/abs/2403.09210}, 
+}
+
+@article{Argyriou_2023,
+   title={JWST MIRI flight performance: The Medium-Resolution Spectrometer},
+   volume={675},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/202346489},
+   DOI={10.1051/0004-6361/202346489},
+   journal={Astronomy &amp; Astrophysics},
+   publisher={EDP Sciences},
+   author={Argyriou, Ioannis and Glasse, Alistair and Law, David R. and Labiano, Alvaro and Álvarez-Márquez, Javier and Patapis, Polychronis and Kavanagh, Patrick J. and Gasman, Danny and Mueller, Michael and Larson, Kirsten and Vandenbussche, Bart and Glauser, Adrian M. and Royer, Pierre and Dicken, Daniel and Harkett, Jake and Sargent, Beth A. and Engesser, Michael and Jones, Olivia C. and Kendrew, Sarah and Noriega-Crespo, Alberto and Brandl, Bernhard and Rieke, George H. and Wright, Gillian S. and Lee, David and Wells, Martyn},
+   year={2023},
+   month=jul, pages={A111} }
