--- a/Latex/Strw-bsc-minimal.tex
+++ b/Latex/Strw-bsc-minimal.tex
@@ -3,6 +3,7 @@
 \usepackage{booktabs}
 \usepackage{pifont}
 \usepackage[version=4]{mhchem}
+\usepackage{parskip}
 
 \title{Detecting Nitrogen Carriers in Planet-Forming Regions of Protoplanetary Disks}
 \author{Niels de Klerk}
@@ -89,7 +90,6 @@
 %     \label{fig: enter-label}
 % \end{figure}
 
-I have mostly worked out the methods and results section. Other than that, I'll put some points i want to include in the other chapters.
 \section{Disk Chemistry}
 Explaining something about general chemistry, including in-depth nitrogen chemistry
 
@@ -102,57 +102,90 @@ When an electron transitions from an energy state with higher energy to an energ
     \lambda=\frac{hc}{\Delta E}
 \end{equation}
 
-where $\Delta E$ is the difference in energy between the two states. 3 different transitions can take place within molecules. 
+where $\Delta E$ is the difference in energy between the two states. Molecules order themselves in different energy states following the rules of thermodynamics. In thermal equilibrium, they organize according to the Boltzmann distribution (\autoref{eq: boltzmann}). 
 
-First, there is the electronic transition. In this transition, an electron jumps from an orbital with higher energy to one with lower. UV 
-\begin{figure}
+\begin{equation}
+    \frac{N_i}{N}=\frac{g_i\exp{-E_i/k_BT}}{Z}
+    \label{eq: boltzmann}
+\end{equation}
+
+with $N_i$ the number of molecules in state $i$, $E_i$ the energy of state $i$, $g_i$ the degeneracy of that energy state,  $T$ the temperature and $Z$ the partition function $Z=\sum_j g_j\exp{-E_j/k_BT}$.
+Different transitions can take place within molecules. This section will discuss the 3 most fundamental transitions: electronic, vibrational, and rotational.
+
+\subsection{Electronic Transition}
+First, there is the electronic transition. In this transition, an electron jumps from an orbital with higher energy to one with lower energy. For simplicity, we will examine the hydrogen atom. The energy levels in the hydrogen atom are determined by 
+
+\begin{equation}
+    E^e=-\frac{13.6\mathrm{ eV}}{n^2},
+    \label{eq: electronic}
+\end{equation}
+where n is the principal quantum number. The energy 13.6 eV in \autoref{eq: electronic} is called the ionization energy. This is the energy of an electron in the ground state needs to be gained to get unbound, resulting in the ionization of the atom. The transitions to $n=1$ are called the Lyman series (Ly$\alpha$, Ly$\beta$, etc.). The Balmer series corresponds with the transitions to $n=2$ (H$\alpha$, H$\beta$, etc) and the Paschen series with $n=3$. The degeneracy of each state is $g(n)=2n^2$. Plotting the energy levels and the resulting spectrum following the Boltzmann distribution gives \autoref{fig: elec}.
+
+\begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.5\linewidth]{electronic energy levels + spectrum}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \includegraphics[width=\linewidth]{Figures/ElecSpectrum.pdf}
+    \caption{The electronic energy levels and the corresponding spectrum, where the molecules follow the Boltzmann distribution}
+    \label{fig: elec}
 \end{figure}
 
-Last, there are vibrational transitions. This changes the vibration and rotation of the molecule. IR
+The electronic transitions typically occur in the ultraviolet (UV) and visible (VIS) parts of the electromagnetic spectrum.
+\subsection{Vibrational Transition}
+Last, there are vibrational transitions. This changes the vibration and rotation of the molecule.
 
-\begin{figure}
+\begin{equation}
+    E^{vib}=\hbar\omega(v+1/2)
+\end{equation}
+
+with $\omega=\sqrt{\frac{k}{\mu}}$ and $v$ the vibrational quantum number. 
+
+\begin{equation}
+    \Delta E^{vib}=\hbar\omega
+\end{equation}
+
+Transitions between energy states follow the selection rule: $\Delta v=\pm 1$. This means the only permitted transitions take place between energy levels with a vibrational quantum number that is one lower or higher than the current state. Plotting the energy levels and the resulting spectrum gives \autoref{fig: vib}.
+
+\begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{vibrational energy levels + spectrum}
-    \caption{Caption}
-    \label{fig:enter-label}
+    \includegraphics[width=\linewidth]{Figures/VibSpectrum.pdf}
+    \caption{The vibrational energy levels and the corresponding spectrum}
+    \label{fig: vib}
 \end{figure}
 
-Second, there is the rotational transition. This transition changes the angular momentum of the molecule.radio and microwave
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\linewidth]{Rotational energy levels + spectrum}
-    \caption{Caption}
-    \label{fig:enter-label}
-\end{figure}
-
-
+The vibrational transitions typically occur in the infrared (IR) part of the electromagnetic spectrum.
+\subsection{Rotational Transition}
+Second, there is the rotational transition. This transition changes the angular momentum of the molecule. radio and microwave
 
 \begin{equation}
     E^{rot}=B_eK(K+1)
 \end{equation}
 
-where J is the rotational quantum number
+where K is the rotational quantum number
 
 \begin{equation}
     \Delta  E^{rot}=2B_e(K+1)
 \end{equation}
 
+The degeneracy of each state is $g(n)=2K+1$. Transitions between energy states follow the selection rule: $\Delta K=\pm 1$. This means the only permitted transitions take place between energy levels with a rotational quantum number that is one lower or higher than the current state. Plotting the energy levels and the resulting spectrum following the Boltzmann distribution gives \autoref{fig: ro}.
 
-\begin{equation}
-    E^{vib}=\hbar\omega(v+1)
-\end{equation}
-with $\omega=\sqrt{\frac{k}{\mu}}$ and $v$ the vibrational quantum number.
-\begin{equation}
-    \Delta E^{vib}=\hbar\omega
-\end{equation}
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\linewidth]{Figures/RoSpectrum.pdf}
+    \caption{The rotational energy levels and the corresponding spectrum, where the molecules follow the Boltzmann distribution}
+    \label{fig: ro}
+\end{figure}
 
-selection rules:
-$\Delta v=\pm 1; \Delta K = 0, \pm1 (and for some \Delta K=0 is forbidden)$
+The electronic transitions typically occur in the microwave and radio parts of the electromagnetic spectrum.
+\subsection{Ro-vibrational Transition}
+In nature, pure vibrational transitions are rare. More often than not, the vibrational transitions are accompanied by rotational transitions. The combination of these two transitions is called a ro-vibrational transition. Transitions between energy states follow the selection rule: $\Delta v=\pm 1$, $\Delta K=0, \pm 1$. Plotting the energy levels and the resulting spectrum following the Boltzmann distribution gives \autoref{fig: rovib}.
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\linewidth]{Figures/RoVibSpectrum.pdf}
+    \caption{The ro-vibrational energy levels and the corresponding spectrum, where the molecules follow the Boltzmann distribution}
+    \label{fig: rovib}
+\end{figure}
+
+In \autoref{fig: rovib}, a distinctive form is visible: P, Q, and R branches. The P branch is the set of peaks with a lower energy than the central peak. The Q branch is the central peak, and the set of peaks on the higher energy side of the peak is the R branch. The P, Q, and R branches correspond to $\Delta K=1, 0, -1$ respectively. For some molecules, the transition with $\Delta K=0$ is forbidden. This also means that the Q branch is missing in the spectrum.
 
 \section{JWST MIRI MRS}
 
@@ -161,9 +194,12 @@ $\Delta v=\pm 1; \Delta K = 0, \pm1 (and for some \Delta K=0 is forbidden)$
 % Some of the properties of the protoplanetary disks can be directly inferred from disk measurements. For instances where this is not the case, we would still like to learn more from our data via a different method. We can use models to simulate the protoplanetary disk and generate synthetic data to compare to actual observations. There are various types of models. Ranging from 0D slab models to thermo-chemical disk models. For our research, we run simulations using the PROtoplanetary Disk Model (ProDiMo), a thermo-chemical disk model. The output of those simulations is then put through Fast Line Tracing system (FLiTs) to get an accurate spectrum of the disk. 
 
 \section{Goal}
-We want to search for a method to detect NO and NH\3 in the spectra of protoplanetary disks using JWST MIRI MRS. 
+First, we want to investigate how nitrogen carriers depend on the abundances of carbon and oxygen. Furthermore, we want to see how the emission of nitrogen carriers changes after enhancing the nitrogen abundance. Next, we want to search for a method to detect NO and NH\3 in the spectra of protoplanetary disks using JWST MIRI MRS. 
 We present the methodology in \autoref{Ch: Methods}. The data and results are shown in \autoref{Ch: Results}. We discuss the results and their implications in \autoref{Ch: Discussion}. In \autoref{Ch: Conclusion}, we conclude our thesis.
 \chapter{Methods}\label{Ch: Methods}
+
+
+
 \section{ProDiMo Simulations}
 
 \begin{table}[!ht]
@@ -200,14 +236,15 @@ Distance to the observer          & d                           & 140 pc        
 \caption{Disk parameters used for the models}
 \label{tab: parameters}
 \end{table}
-To investigate whether we can detect NO and NH\3 in the spectra of protoplanetary disks and how nitrogen carriers depend on the C and O abundance, 
-We ran a model grid with varying abundances of C and O using ProDiMo. The parameters with which the models were run are in \autoref{tab: parameters}. 
+
+To investigate whether we can detect NO and NH\3 in the spectra of protoplanetary disks and how nitrogen carriers depend on the C and O abundance, we ran a model grid with varying abundances of C and O using ProDiMo. The parameters with which the models were run are in \autoref{tab: parameters}.
+
 \begin{equation}
     \epsilon_X\equiv\log\frac{N_X}{N_H}+12
 \label{eq: abundance}
 \end{equation}
-The abundances are defined as in \autoref{eq: abundance}. In this system $\epsilon_H=12$. 
-The abundances of C and O were varied between -0.5 and 0.5 in steps of 0.25, where 0 corresponds to the solar abundance. The grid contains 25 models, with the fiducial model in the middle, which is based on the solar abundances of C and O. Furthermore, we increased the nitrogen abundance by an order of magnitude compared to the solar abundance.
+
+The abundances are defined as in \autoref{eq: abundance}. In this system $\epsilon_H=12$. The abundances of C and O were varied between -0.5 and 0.5 in steps of 0.25, where 0 corresponds to the solar abundance. The grid contains 25 models, with the fiducial model in the middle, which is based on the solar abundances of C and O. Furthermore, we increased the nitrogen abundance by an order of magnitude compared to the solar abundance.
 
 \begin{table}[!ht]
 \centering
@@ -234,9 +271,9 @@ PAH              & 3.444                  & Fixed                         \\ \bo
 
 
 
-After running the model grid, we used FLiTs to generate the spectra for all the models. We calculated the entire spectrum containing  \textbf{INSERT EXACT MOLECULES IN THE TOTAL SPECTRUM} and the spectra of individual molecules as well. The spectra we retrieved with FLiTs have an unrealistically high resolution. To make the spectrum more realistic, we convolved the spectrum to a resolving power of $R = \Delta\lambda/\lambda = 3000$ using a Gaussian kernel to create a spectrum of the correct resolving power. The value of 3000 was chosen as it is approximately the average resolving power of the MIRI MRS \citep{SOURCE}. 
+After running the model grid, we used FLiTs to generate the spectra for all the models. We calculated the full spectrum containing emission from C\2H\2, CH\4, CO, CO\2, H\2O, HCN, NH\3, NO, OH, and the spectra containing the emissions of the individual molecules. The spectra we retrieved with FLiTs have an unrealistically high resolution. To make the spectrum more realistic, we convolved the spectrum to a resolving power of $R = \Delta\lambda/\lambda = 3000$ using a Gaussian kernel to create a spectrum of the correct resolving power. The value of 3000 was chosen as it is approximately the average resolving power of the MIRI MRS \citep{Argyriou_2023}. 
 
-We wanted to add noise to the data to make the simulated spectra as realistic as possible. The MINDS team has observations which have $SNR = 300$ \citep{SOURCE}. We want to make our simulated data follow the same vein. We estimate the noise level needed to create an $SNR = 300$ using the spectrum minimum before continuum subtraction. We assume that the noise is normally distributed. After applying this noise, we subtract the continuum to get the spectrum we can use to analyze the different molecules that compose it.
+We wanted to add noise to the data to make the simulated spectra as realistic as possible. The MINDS team has observations which have $SNR = 300$ \citep{henning2024mindsjwstmirimidinfrared}. We want to make our simulated data follow the same vein. We estimate the noise level needed to create an $SNR = 300$ using the spectrum minimum before continuum subtraction. We assume that the noise is normally distributed. After applying this noise, we subtract the continuum to get the spectrum we can use to analyze the different molecules that compose it.
 
 
 The flux density we have from FLiTs is in units of Jansky, but we would like to integrate the flux density to get the flux. For this, we need to convert the flux per unit frequency to flux per unit wavelength. We use the equation
@@ -245,19 +282,22 @@ The flux density we have from FLiTs is in units of Jansky, but we would like to 
     F_\lambda=\frac{c}{\lambda^2}F_\nu
 \end{equation}
 
-\textbf{SPECTRUM CLASSIFICATION}
 The different species have different spectral regions in which they emit. To classify these regions, we split the entire spectrum into windows of 0.001 $\mu$m from 4.9 to 27.5 $\mu$m. Next, we integrate the spectrum for each species in that window and store the species that has the highest flux in that region. Doing this for all models and taking the mode. We get the species for each window that has the strongest emission for most of the simulated spectra.  
 
 
 \section{Cross-Correlation}
-For our analysis, we used cross-correlation. This is a signal detection technique for detecting weak signals. We implemented this to detect the weak spectral features of NO and NH\3 It is defined as follows. 
+For our analysis, we used cross-correlation. This is a signal detection technique for detecting weak signals. We implemented this to detect the weak spectral features of NO and NH\3. It is defined as follows. 
+
 \begin{equation}
     R_{fg}(\tau)=\int^\infty_{-\infty}\overline{f(t)}g(t+\tau)dt
 \end{equation}
+
 The autocorrelation is the cross-correlation of a function with itself
+
 \begin{equation}
     R_{ff}(\tau)=\int^\infty_{-\infty}\overline{f(t)}f(t+\tau)dt
 \end{equation}
+
 As all our functions are real valued, we can omit the complex conjugation in the integrand.
 
 We calculated the average spectrum for each species and divided that by the maximum of the spectrum to normalize it. We used this template spectrum to cross-correlate with the spectrum containing all the species. The cross-correlation should peak when the template spectrum matches the spectrum containing all the species. To quantify the height of the peak, we calculated the difference between the height of the peak and the median value of the cross-correlation in a small region around the peak. We took the median as this is less susceptible to outliers to capture the general trend around the peak more optimally. We used hypothesis testing to test whether or not there is statistical evidence to say the molecule is present. We had the following null hypothesis and alternative hypothesis
@@ -276,26 +316,9 @@ To assess the significance of the peak in cross-correlation, we used a Monte Car
 After looking at the simulated spectra, we wanted to apply our techniques to observations made with JWST MIRI MRS. We have access to 3 sources. 
 
 \textbf{MASKING OF REGIONS}
-LTE models to fit the model and try to enhance the hidden molecules
+LTE models to fit the model and try to enhance the hidden molecules.
+
 \textbf{MORE EXPLANATION NEEDED}
-% \begin{figure}[!ht]
-%     \centering
-%     \includegraphics[width=\linewidth]{Figures/FullSpectrum_GWLup.pdf}
-%     \caption{The continuum subtracted spectrum of GWLup}
-%     \label{fig: GWLup}
-% \end{figure}
-% \begin{figure}[!ht]
-%     \centering
-%     \includegraphics[width=\linewidth]{Figures/FullSpectrum_Sz98.pdf}
-%     \caption{The continuum subtracted spectrum of Sz98}
-%     \label{fig: Sz98}
-% \end{figure}
-% \begin{figure}[!ht]
-%     \centering
-%     \includegraphics[width=\linewidth]{Figures/FullSpectrum_V1094Sco.pdf}
-%     \caption{The continuum subtracted spectrum of V1094Sco}
-%     \label{fig: V1094Sco}
-% \end{figure}
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Figures/Measurements.pdf}
@@ -337,7 +360,7 @@ Lastly, we inspected the distribution of nitrogen-bearing molecules: HCN, HNC, N
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=.8\linewidth]{Figures/AbundanceN2.pdf}
+    \includegraphics[width=.5\linewidth]{Figures/AbundanceN2.pdf}
     \caption{The distribution of N\2 across the disk of the fiducial model.}
     \label{fig: n2 distribution}
 \end{figure}
@@ -349,6 +372,7 @@ Lastly, we inspected the distribution of nitrogen-bearing molecules: HCN, HNC, N
     \label{fig: nitrogen distribution}
 \end{figure}
 
+\newpage
 \section{FLiTs Spectra}
 The models in the model grid we created were used with FLiTs to create accurate spectra. The resulting spectra are shown in \autoref{fig: all spectra}. There is a clear division in the shapes of the spectra. In the bottom left corner, 6 spectra have a strong HCN feature. These models also have a C/O ratio greater than unity. The other models have strong water features and have a C/O ratio smaller than unity. 
 
@@ -390,7 +414,7 @@ The flux of the different species changes depending on the abundances of C and O
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=\linewidth]{Figures/Heatmaps2.pdf}
-    \caption{The total flux of HCN, NO, and NH\3 for all the models in the grid.}
+    \caption{The total flux of C\2H\2, HCN, NO, and NH\3 for all the models in the grid.}
     \label{fig: Heatmaps2}
 \end{figure}
 
@@ -467,12 +491,12 @@ As visible in \autoref{fig: add noise}, it is hard to distinguish the NH\3 and N
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=\linewidth]{Figures/Cross-Correlation.pdf}
+    \includegraphics[width=.6\linewidth]{Figures/Cross-Correlation.pdf}
     \caption{The cross-correlation of the H\2O template with the spectrum the fiducial model}
     \label{fig: crosscorr}
 \end{figure}
 
-When we applied this method to the fiducial model and model C+0.25 O-0.25, we got the detections shown in \autoref{tab: fiducial detection} and \autoref{tab: other detection} respectively. 
+When we applied this method to the fiducial model and model C+0.25 O-0.25, we got the detections shown in \autoref{tab: combined_detections}. 
 
 % \begin{table}[!ht]
 % \centering
@@ -531,8 +555,8 @@ OH         & Yes & No  & \ding{51}    & No  & No  & --        \\
 \hline
 \end{tabular}
 }
-\caption{Molecular detections in Spectrum A and B before and after subtracting modeled molecular emission. A confirmed detection (\ding{51}) indicates that the molecule is detected in the full spectrum but disappears in the residual.}
-\label{tab:combined_detections}
+\caption{Molecular detections in the spectrum of the fiducial model (A) and the model with C+0.25 and O-0.25 (B) before and after subtracting molecular emission. A confirmed detection (\ding{51}) indicates that the molecule is detected in the full spectrum but disappears in the residual.}
+\label{tab: combined_detections}
 \end{table}
 
 We compared the cross-correlation technique for all the molecules. We did this for the spectrum of the fiducial model. Once, we cross-correlate with the spectrum to see if the molecule is present, and once with the molecule emission subtracted from the spectrum to check that this does not result in a false-positive.
@@ -625,6 +649,8 @@ We used LTE models to fit CO and H\2O in the region 4.9-6.5 $\mu$m.
 
 After removing the fits from the spectra and redoing the cross-correlation, we detected NO emission in the spectrum of V1094Sco.
 
+
+
 \chapter{Discussion}\label{Ch: Discussion}
 \section{Interpretation}
 \section{Comparison to Other Works}
@@ -641,6 +667,7 @@ Assumptions:
 - averaging of the emission of each species
 
 \section{Future Work}
+
 
 
 \chapter{Conclusion}\label{Ch: Conclusion}
